2007-02-08  Per Bothner  <per@bothner.com>

	* FindCapturedVars.java (walkClassExp): If class needs static link,
	then init methods do so as well.

	* Compilation.java (generateConstructor): Allow lexp to be null.
	(generateBytecode): Call generateConstructor on moduleClss with null
	lexp.  This prevents emitting initializers in wrong class.

	* InlineCalls.java  (walkReferenceExp): Map name->class using getTypeFor
	here, rather than later, in FindCapturedVars.
	* FindCapturedVars.java (walkReferenceExp): Don't do getTypeFor here.

	* Language.java (getTypeFor): Remove redundant assignment.

	* TypeValue.java: Extend java.lang.reflect.Type if JAVA5.

2007-02-01  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (compile): Alwaus set thisType to null
	if constructor.
	* ClassExp.java (compile): If there is a staticLinkField,
	have to set it in *init*.
	Defer enterFunction until after super init call.
	* LambdaExp.java (declareClosureEnv): If *init* needs closureEnv,
	we need to pass it as an extra parameter, not through 'this'.

2007-01-19  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (checkCurrent): Use ClassType.getContextClass.

2007-01-16  Per Bothner  <per@bothner.com>

	* Language.java (formatType): New method.

2007-01-14  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (find): Set moduleClass field.

	* ModuleInfo.java (checkCurrent): Use context-ClassLoaxder rather than
	ModuleManager's defaultClassLoader.  Recover from SecurityException.
	* ModuleManager.java (defaultClassLoader): Remove no-longer-used field.
	* ModuleExp.java (evalToClass): Pass context ClassLoader as parent
	of new ArrayClassLoader.  Catch SecurityException.
	(evalToClass): Use one-argument version of loadClass, since
	2-argument version is now protected if JAVA2 is enabled.
	* Compilation.java (setupLiterals): Likewise.

2007-01-13  Per Bothner  <per@bothner.com>

	* ModuleManager.java (findWithSourcePath(Path,String)): New method.