@@ -1,3 +1,15 @@
+2007-02-18  Per Bothner  <per@bothner.com>
+
+	* lang/Translator.java (rewrite): Handle rewriting class name to class
+	by calling checkDefaultBinding.
+	* standard/Scheme.java (initScheme, getType): Define class and type
+	types.
+	(checkDefaultBinding): New method.
+	(exp2Type): Simpleify to use getTTypeFor.
+	* standard/prim_method.java (rewrite): Use implemetation type.
+	* standard/define_alias.java (scanForDefinitions): \
+	Handle aliasing to a constant.
+
 2007-02-08  Per Bothner  <per@bothner.com>
 
 	* standard/Scheme.java (getTypeFor): New method.
