@@ -1,3 +1,7 @@
+2007-02-18  Per Bothner  <per@bothner.com>
+
+	* Language.java (getTypeFor): Handle Ref bound to constant.
+
 2007-02-08  Per Bothner  <per@bothner.com>
 
 	* FindCapturedVars.java (walkClassExp): If class needs static link,
